@@ -2,6 +2,7 @@
 * Include paths are invalid if not used in a project - do not include this file anywhere except in a script
 * All of these includes the script will still compile without (including the core engine headers instead of these copies), however they are needed for correct intellisense
 */
+#define CPP
 #include <chrono>
 #include <any>
 
@@ -33,7 +34,6 @@
 #include "./SceneScriptInterface.h"
 #include "./uuids.h" // Generated through editor on save
 //
-
 
 /* TODO: Provide interface override for logging macros */
 #ifdef ORNG_CORE_TRACE
@@ -99,6 +99,33 @@ extern "C" {
 		};
 
 
+		/*constexpr unsigned int CompileTimeRandom() {
+			return 1103515245u * static_cast<unsigned int>(__TIME__[7]) +
+				12345u * static_cast<unsigned int>(__TIME__[5]) +
+				1234567u * static_cast<unsigned int>(__TIME__[3]);
+		}
+
+		inline static std::unordered_map<ORNG::SceneEntity*, std::unordered_map<const char*, std::any>> data_bank;
+
+		template<typename T>
+		class StateVal {
+		public:
+			StateVal(const T& init, const char* t_key) : key(t_key) {
+				if (data_bank.contains(t_key))
+					data = data_bank[t_key];
+				else
+					data = init;
+			}
+
+			~StateVal() {
+				data_bank[key] = data;
+			}
+
+			T data;
+		private:
+			const char* key = nullptr;
+		};
+		*/
 	};
 
 
